tests/snapshots/sfc/js/patches__callback_with_typed_parameters.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "test",
  setup(__props) {
    const items = [];
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        _toDisplayString(items.map((item) => item.name).join(", ")),
        1
        /* TEXT */
      );
    };
  }
};
