tests/snapshots/sfc/js/patches__component_event_rest_params_stay_local.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { resolveComponent as _resolveComponent, openBlock as _openBlock, createBlock as _createBlock } from "vue"


export default {
  __name: 'test',
  emits: ['update'],
  setup(__props, { emit: __emit }) {

const emit = __emit

return (_ctx, _cache) => {
  const _component_Child = _resolveComponent("Child")

  return (_openBlock(), _createBlock(_component_Child, {
    onUpdate: _cache[0] || (_cache[0] = (...$args) => emit('update', ...$args)),
    onChange: _cache[1] || (_cache[1] = (...args) => emit('update', ...args))
  }))
}
}

}
