tests/snapshots/sfc/js/patches__default_as_prop_name_should_not_use_shorthand.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import DefaultComponent from './Default.vue'


export default {
  __name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createBlock(DefaultComponent))
}
}

}
