tests/snapshots/sfc/js/patches__defineemits_binding_preserves_blank_line_before_setup_body.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "test",
  emits: ["change"],
  setup(__props, { emit: __emit }) {
    const emit = __emit;
    function handleClick() {
      emit("change", "hello");
    }
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("button", { onClick: handleClick }, "Click");
    };
  }
};
