tests/snapshots/sfc/js/patches__duplicate_imports_should_be_filtered.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
import { ref } from "vue";
import { computed } from "vue";
export default {
  __name: "test",
  setup(__props) {
    const count = ref(0);
    const double = computed(() => count.value * 2);
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        _toDisplayString(count.value) + " " + _toDisplayString(double.value),
        1
        /* TEXT */
      );
    };
  }
};
